@@ -2,6 +2,8 @@
 v3.3.0-git
 ----------
 
+[jan] Add support for Sieve date extension to vacation messages (Request
+      #12520).
 [mjr] Export active vacation messages via the timeObjects API (Request #10885).
 [mms] Added a NoSQL (MongoDB) driver for the storage backend.
 [mms] Rule code has been separated from the storage backend drivers.
